corpus/code_block.txt
================================================================================
Simple code block
================================================================================
>
  abcabcabc
<
--------------------------------------------------------------------------------

(help_file
  (code_block))

================================================================================
Code block with text before
================================================================================
This code: >
  abc
<
--------------------------------------------------------------------------------

(help_file
  (line
    (word)
    (word)
    (code_block)))

================================================================================
Code block with implicit stop
================================================================================
>
  abc

Blehke
--------------------------------------------------------------------------------

(help_file
  (code_block)
  (line
    (word)))

================================================================================
Strange codeblock
================================================================================

Note that in the command: >
	:if "foo"
	:" NOT executed
"foo" is converted to 0, which means FALSE.  If the string starts with a
non-zero number it means TRUE: >
	:if "8foo"
	:" executed
To test for a non-empty string, use empty(): >
	:if !empty("foo")
<

--------------------------------------------------------------------------------

(help_file
  (line
    (word)
    (word)
    (word)
    (word)
    (word)
    (code_block))
  (line
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word))
  (line
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (code_block))
  (line
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (code_block)))
