test/corpus/line_block.txt
================================================================================
line: basic
================================================================================
     a foo bar


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word)
      (word))))

================================================================================
blocks: missing EOL at end of document
================================================================================
block1 text text
text text

block2 text

block3 text text
text text
text text text text

--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word)
      (word))
    (line
      (word)
      (word)))
  (block
    (line
      (word)
      (word)))
  (block
    (line
      (word)
      (word)
      (word))
    (line
      (word)
      (word))
    (line
      (word)
      (word)
      (word)
      (word))
    (MISSING "<")))

================================================================================
blocks: with blank line at end of document
================================================================================
block1 text text

block2 text text


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word)
      (word)))
  (block
    (line
      (word)
      (word)
      (word))))
