test/corpus/text.txt
================================================================================
simple file with text
================================================================================
Simple text
<Del> <CSI> <C-S-x> <C-x> <M-^> <x-y>
CTRL-{char} ctr-z CTRL-SHIFT-\ CTRL-+ CTRL-Break ALT-?


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word))
    (line
      (keycode)
      (keycode)
      (keycode)
      (keycode)
      (keycode)
      (keycode))
    (line
      (keycode)
      (word)
      (keycode)
      (keycode)
      (keycode)
      (keycode))))

================================================================================
multiline text
================================================================================
Multiline
text


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word))
    (line
      (word))))

================================================================================
empty line
================================================================================
An
Empty

line


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word))
    (line
      (word)))
  (block
    (line
      (word))))

================================================================================
notes
================================================================================
NOTE: this is a note

Note that this is not a note.

This is DEPRECATED:

This is not DEPRECATED.

Experimental is EXPERIMENTAL: ok?


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (note)
      (word)
      (word)
      (word)
      (word)))
  (block
    (line
      (word)
      (word)
      (word)
      (word)
      (word)
      (word)
      (word)
      (word)))
  (block
    (line
      (word)
      (word)
      (note)))
  (block
    (line
      (word)
      (word)
      (word)
      (word)
      (word)))
  (block
    (line
      (note)
      (word)
      (note)
      (word))))
