test/corpus/url.txt
================================================================================
url
================================================================================
url in text https://neovim.io/doc/user/#yay more here bro
text text
  https://neovim.io/doc/user/#yay  
x (https://neovim.io/doc/user/#yay) https://neovim.io/doc/user/#yay


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word)
      (word)
      (url
        (word))
      (word)
      (word)
      (word))
    (line
      (word)
      (word))
    (line
      (url
        (word)))
    (line
      (word)
      (word)
      (url
        (word))
      (word)
      (url
        (word)))))

================================================================================
url with parens (FIXME)
================================================================================
url: (https://neovim.io/doc/user/(foo)#yay)
markdown: [https://neovim.io/doc/user/#yay](https://neovim.io/doc/user/#yay).


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word)
      (url
        (word))
      (word))
    (line
      (word)
      (optional_arg
        (word))
      (word)
      (url
        (word))
      (word))))
